assets/css/style.css
/* Google Fonts */
@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&family=Roboto+Slab&display=swap');

*{
    margin: 0;
    padding: 0;
    border: none;
}

body {
    font-family: 'Roboto Condensed', sans-serif;
}

/* Logo, Menu and Headings */

h1, h2 {
    font-family: 'Roboto Slab', sans-serif;
}

h2 {
    font-size: 125%;
}

#logo {
    float: left;
    font-size: 250%;
    color: #787878;
}

#menu {
    float: right;
    list-style-type: none;
    margin: 0;
    padding: 0;
    display: inline;
    font-size: 110%;
    letter-spacing: 2px;
}

li {
    float: left;
    margin-right: 25px;
}

#menu a {
    color: inherit;
    text-decoration: none;
}

.active {
    border-bottom: solid 1px #787878;
}

#menu a:hover {
    border: solid 1px #787878;
}

#menu, #logo {
    line-height: 50px;
}

/* Hero Image */

#hero-image {
    display: grid;
    grid-template-columns: 1fr 1fr;
    clear:both;
}

#heroimage1 {
    height: 600px;
    background: url('../images/water_pipes.jpg') no-repeat;
    border: solid white 1px;
}

#heroimage2 {
    height: 600px;
    background: url('../images/consumer_board_testing.webp') no-repeat;
    border: solid white 1px;
}


/* Index About Us*/

#aboutus {
    width: 50%;
    height: 200px;
    text-align: center;
    border: solid 1px black;
    margin:auto;
    font-size: 200%;
}

#aboutus h2{
   text-decoration: underline;
}

/* Index Reviews */

#reviews {
        margin: auto;
        text-align: center;
}


/* Services */

#trade-services {
    margin: auto;
    text-align: center;
    clear: both;
}

#trade-services > h2 {
    font-size: 180%;
    text-decoration: underline;
}

#plumbing-electric {
    display: grid;
    grid-template-columns: 1fr 1fr;
    clear:both;
}

#plumbing-services {
    background: url(../images/plumbing_tools.jpg) no-repeat;
    height: 300px;
    width: 100%;
    margin: auto;
}

#electrical-services {
    background: url(../images/electrician_tools.jpg) no-repeat;
    height: 300px;
    width: 100%;
    margin: auto;

}

#plumbing-services, #electrical-services {
    color: white;
    font-size: 120%;
}

#plumbing-services > h3, #electrical-services > h3 {
    font-size: 150%;
    text-decoration: underline;
    background-color: rgba(105, 103, 128, .7);
    width: 35%;
    height: 10%;
}

.service-list {
    display: block;
    background-color: rgba(105, 103, 128, .7);
    width: 35%;
    height: 50%;
}

.service-list > li {
    float: left;
    clear: left;
    list-style-type: square;
    list-style-position: inside;
}

#why-plumb div , #why-elect div {
    width: 50%;
    height: 100px;
    border: white solid 1px;
}


#p1, #p3, #p5, #e1, #e3, #e5 {
    float: left;
    text-align: left;
}

#p2, #p4, #p6, #e2, #e4, #e6 {
    float: right;
    text-align: right;
}


/* Gallery */

#photos {
    clear: both;
    line-height: 0;
    column-count: 3;
    column-gap: 0;
}

#photos > img {
    width: 100%;
}

/* Contact Form */

#contact-section {
    clear: both;
    background: url("/assets/images/van.jpg");
    background-size: cover;
    background-position: center;
    height: 900px;
}

#contact-form {
    background-color: rgba(105, 103, 128, .7);
    height: 35%;
    width: 35%;
    margin: auto;
    text-align: center;
    color: white;
    clear: both;
    position: relative;
    top: 10%;
    padding-top: 1%;
    
}

.job-input {
    background: transparent;
    border: 1px solid white;
    color: white;
    padding-top: 5px;
}

.quote-button {
    background-color: orange;
    color: white;
    font-size: 100%;
    padding: 10px 10px 10px 10px;
    border: 1px solid white;
    margin-top: 10px;
}

.quote-button :hover {
    background-color: white;
    color: orange;
}

/* Footer */

footer {
 display: table;
 text-align: center;
 margin: auto;
 clear: both;
}

footer > ul {
    list-style-type: none;
}

.medialinks i {
    font-size: 300%;
    margin: 5px;
    padding: 5px;
    color: #787878;
}

/* Media Queries */

/* for smaller screens 320px and smaller */

@media screen and (max-width: 320px) {

/* Logo and Menu */

    #logo {
        text-align: center;
        font-size: 250%;
        color: #787878;
        margin: auto;
    }
    
    #menu {
        list-style-type: none;
        margin: 0;
        padding: 0;
        font-size: 100%;
        letter-spacing: 1px;
        margin: auto;
    }
    
    li {
        
        margin-right: 20px;
    }
   
/* Hero Image */

#hero-image {
    display: inline;
    max-width: 100%;
    max-height: 50%;
}

#heroimage1 {
    background: url('../images/water_pipes.jpg') no-repeat;
    background-size: contain;
    max-width: 100%;
    max-height: 50%;
    border: solid white 1px;
    clear: both;
    margin: auto;
}

#heroimage2 {
    background: url('../images/consumer_board_testing.webp') no-repeat;
    border: solid white 1px;
    background-size: contain;
    max-width: 100%;
    max-height: 50%;
    clear: both;
    margin: auto;
}


/* About us */

#aboutus {
    width: 95%;
    height: 30%;
    text-align: center;
    border: solid 1px black;
    margin:auto;

    }

/* Index Reviews */

iframe {

    width: 95%;
    height: 30%;
}

/* Services */

#trade-services {
    margin: auto;
    text-align: center;
    clear: both;
}

#trade-services > h2 {
    font-size: 180%;
    text-decoration: underline;
}

#plumbing-electric {
    display: inline;
    clear:both;
}

#plumbing-services {
    background: url(../images/plumbing_tools.jpg) no-repeat;
    height: 300px;
    width: 100%;
    margin: auto;
}

#electrical-services {
    background: url(../images/electrician_tools.jpg) no-repeat;
    height: 300px;
    width: 100%;
    margin: auto;

}


#plumbing-services > h3, #electrical-services > h3 {
    width: 100%;
    height: 10%;
}

.service-list {
    display: block;
    background-color: rgba(105, 103, 128, .7);
    width: 100%;
    height: 50%;
}



#why-plumb div , #why-elect div {
    width: 100%;
    height: 20%;
    border: white solid 1px;
}

}


/* Contact Form */

#contact-section {
    clear: both;
    background: url("/assets/images/van.jpg") no-repeat;
    background-size: cover;
    background-position: center;
    height: 900px;
}

#contact-form {
   
    height: 40%;
    width: 80%;

    
}

